# api/docs/openapi.yaml
@@ -11,60 +11,23 @@ paths:
         - $ref: "#/components/parameters/Authorization"
       responses:
         "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  message:
-                    type: string
-                    example: "Test"
-        default:
-          description: Error
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  message:
-                    type: string
-                    example: "Failed to get test"
-  /login:
+          $ref: "#/components/responses/DefaultSuccess"
+        "500":
+          $ref: "#/components/responses/500InternalServerError"
+
+  /sign-up:
     post:
       parameters:
         - $ref: "#/components/parameters/Authorization"
       requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                name:
-                  type: string
-                  example: "test"
+        $ref: "#/components/requestBodies/SignUp"
       responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  message:
-                    type: string
-                    example: "Login success"
-        default:
-          description: Error
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  message:
-                    type: string
-                    example: "Failed to login"
+        "201":
+          $ref: "#/components/responses/DefaultSuccess"
+        "401":
+          $ref: "#/components/responses/401UnauthorizedError"
+        "500":
+          $ref: "#/components/responses/500InternalServerError"
 
 components:
   parameters:
@@ -75,3 +38,68 @@ components:
         type: string
       required: true
       description: Bearer token
+
+  requestBodies:
+    SignUp:
+      required: true
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              name:
+                type: string
+                example: "your_name"
+
+  responses:
+    DefaultSuccess:
+      description: OK
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              message:
+                type: string
+                example: "Success"
+            required:
+              - message
+
+    401UnauthorizedError:
+      description: Unauthorized
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              message:
+                type: string
+                example: "Unauthorized"
+            required:
+              - message
+
+    403ForbiddenError:
+      description: Forbidden
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              message:
+                type: string
+                example: "Forbidden"
+            required:
+              - message
+
+    500InternalServerError:
+      description: Internal Server Error
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              message:
+                type: string
+                example: "Internal Server Error"
+            required:
+              - message
